app/webroot/css/desktop-view.less
@gridWidth : 150px;
@gridHeight : 30px;
@gridVPadding : 10px;
@gridHPadding : 10px;
@gridPadding : 10px;
@folderHeight : 4*@gridHeight + 3*@gridPadding;

body{
	//** overflow-y : hidden defined in inline html;
}

#board{
    //background: darken(@bg-color, 15%);
    position: relative;
    top:50px;
    overflow-y : hidden;
    .external{
      padding-right:22px;
      background:url(../img/icon-external-link.gif) right center no-repeat;
      background-size: 18px 12px;
    }
}
#desktop-view{
  top : 0px;
  width:100%;
  min-height: 100%;
  position:absolute;
  overflow:hidden;
  overflow-y: auto;
  z-index: 1;
  background: @bg-color;

	@sideWidth : 90px;
	#topbar{

	  @c : darken(@blue, 10%);
	  @color1 : darken(@bg-color, 35%);
	  @color2 : #666666;
	  position:relative;
	  height: 45px;
	  width:100%;
	  //-webkit-box-shadow: 0 3px 5px 5px lighten(@dark, 40%);
	  //box-shadow: 0 3px 5px 3px  lighten(@dark, 60%);
	  //background: lighten(@red, 30%);
	  //background : darken(@bg-color, 75%);
	  background: lighten(@dark, 10%);
	  position: fixed;
	  left:0;
	  top:0;
	  z-index:500;
	  //border-bottom : 1px solid darken(@bg-color, 5%);
	  .bg-left{
	    height : 45px;
	    position: absolute;
	    left : 0;
	    top : 0;
	    //background: darken(@dark, 0%);
	  }
	  .search{
	    position:relative;
	    left : @sideWidth;
	    top : ~"calc(50% - 10px)";
	    width : 200px;
	    height : 20px;

	    ::-webkit-input-placeholder {
	       color: white;
	    }

	    :-moz-placeholder { /* Firefox 18- */
	       color: white;  
	    }

	    ::-moz-placeholder {  /* Firefox 19+ */
	       color: white;  
	    }

	    :-ms-input-placeholder {  
	       color: white;  
	    }


	    input{
	      border : 0px solid @color2;
	      .border-radius(3px);
	      width : 180px;
	      height : 20px;      
	      background: lighten(@dark, 30%);
	      padding:0;
	      padding-left : 10px;
	    }
	    //search icon
	    span{
	      position:absolute;
	      right : 0px;
	      display: block;
	      top : 4px;
	      font-size:10px;
	      color : lighten(@dark, 10%);
	    }
	  }
	  .home{
	    position: absolute;
	    left : @sideWidth + 200px;
	    top : 15px;
	    width : 30px;
	    span{
	      color: lighten(@dark, 30%);
	      font-size:20px;
	      display: block;
	    }
	  }
	  .icon{
	    color: lighten(@dark, 30%);
	    font-size:20px;
	    position:relative;
	    top:~"calc(50% - 10px)";
	    left : @sideWidth;
	  }
	  .logo{
	    color: @c;
	    font-size:25px;
	    position:relative;
	    top:5px;
	    left : @sideWidth + 10px;
	    letter-spacing: 2px;
	    //text-shadow: -1px -1px 0px #999;
	  }
	  .funcs-1{
	    width : 300px;
	    position: absolute;
	    right:@sideWidth;
	    top : ~"calc(50% - 12px)";
	    a{
	      float:right;
	      display: block;
	      margin-left : 10px;
	      color: lighten(@dark, 10%);
	      //color: white;
	      background: lighten(@dark, 30%);
	      font-size:10px;
	      padding:5px 5px 3px 5px;
	      border : 1px solid lighten(@dark, 10%);
	      .border-radius(3px);
	      &:hover{
	        color : white;
	      };
	    }
	  }
	  div.funcs{
	    height:100%;
	    position:absolute;
	    right:17px;
	    top:17px;
	    .add25{
	      fill : #ffffff;
	    }
	  }
	}
}
/* ... */

